--- a/client/src/app/components/list-songs/list-songs.component.html
+++ b/client/src/app/components/list-songs/list-songs.component.html
@@ -14,3 +14,21 @@
       <p class="rating"><strong>Rating:</strong> {{ song.rating }}</p>
     </div>
   </div>
+
+  <!-- Modal Añadir Canción -->
+<div class="modal fade" id="addSongModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <app-add-song></app-add-song>
+        </div>
+        <div class="modal-footer justify-content-start">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
