--- a/client/src/app/components/list-songs/list-songs.component.html
+++ b/client/src/app/components/list-songs/list-songs.component.html
@@ -5,7 +5,7 @@
   </button>
   </div>
   <div class="song-list">
-    <div class="song-card" *ngFor="let song of songs">
+    <div class="song-card" *ngFor="let song of songs" (click)="openModal(song); getArtist(song.artist)">
       <img [src]="song.poster" [alt]="song.title" class="song-poster">
       <h3>{{ song.title }}</h3>
       <p class="year"><strong>Year:</strong> {{ song.year }}</p>
@@ -32,3 +32,55 @@
       </div>
     </div>
   </div>
+
+
+
+  <!-- Modal para Editar Cancion -->
+<!-- Modal -->
+<div class="modal fade" id="songModal" tabindex="-1" aria-labelledby="songModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content p-3">
+        <div class="modal-header border-0 justify-content-center" >
+          <h5 class="modal-title" id="songModalLabel">{{ selectedSong?.title }} ({{ this.nameArtist }})</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <!-- Imagen -->
+          <div class="d-flex justify-content-center">
+            <img width="50%" [src]="selectedSong?.poster" [alt]="selectedSong?.title" class="img-fluid rounded mb-3 justify-content-center">
+          </div>
+          
+          <!-- Géneros -->
+          <div class="mb-2">
+            <span *ngFor="let genre of selectedSong?.genre" class="badge bg-secondary me-1">{{ genre }}</span>
+          </div>
+  
+          <!-- Compañía discográfica -->
+          <div class="mb-3">
+            <strong>Compañía discográfica:</strong>
+            <span *ngFor="let company of selectedSong?.label" class="badge bg-light text-dark border me-1">{{ company }}</span>
+          </div>
+          <br>
+          <!-- País -->
+          <label><strong>País</strong></label>
+          <input type="text" class="input-underline" placeholder="" value="{{ selectedSong?.country }}">
+          <br><br>
+          <!-- Año -->
+          <label><strong>Año</strong></label>
+          <input type="text" class="input-underline" placeholder="" value="{{ selectedSong?.year }}">
+        </div>
+  
+        <div class="modal-footer border-0 d-flex justify-end">
+          <!-- Botones de editar y eliminar -->
+          <button class="btn btn-outline-secondary">
+            <i class="bi bi-pencil"></i>
+          </button>
+          <button class="btn btn-outline-danger">
+            <i class="bi bi-trash"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  
