--- a/client/src/app/components/list-songs/list-songs.component.html
+++ b/client/src/app/components/list-songs/list-songs.component.html
@@ -36,6 +36,7 @@
 
 
   <!-- Modal para Editar Cancion -->
+<!-- Modal -->
 <div class="modal fade" id="songModal" tabindex="-1" aria-labelledby="songModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content p-3">
@@ -48,16 +49,25 @@
           <div class="d-flex justify-content-center">
             <img width="50%" [src]="selectedSong?.poster" [alt]="selectedSong?.title" class="img-fluid rounded mb-3 justify-content-center">
           </div>
+          
           <!-- Géneros -->
-          <div class="mb-2">
-            <span *ngFor="let genre of selectedSong?.genre" class="badge bg-secondary me-1">{{ genre }}</span>
+          <div class="mb-2 d-flex justify-content-center">
+            <span *ngFor="let genre of selectedSong?.genre" class="badge bg-dark me-1">{{ genre }}</span>
           </div>
+          <label><strong>Género</strong></label>
+          <div class="mt-2">
+            <span *ngFor="let genre of selectedSong?.genre" class="badge bg-secondary me-2">
+              {{ genre }} 
+              <button type="button" class="btn-close btn-close-white ms-1" aria-label="Close" (click)="removeGenre(genre)"></button>
+            </span>
+          </div>
+          <br>
+  
           <!-- Compañía discográfica -->
           <div class="mb-3">
             <strong>Compañía discográfica:</strong><br>
             <p class="badge bg-info text-dark border me-1">{{this.nameCompany}}</p>
           </div>
-          <br>
           <!-- País -->
           <label><strong>País</strong></label>
           <input type="text" class="input-underline" placeholder="" value="{{ this.countryCompany }}">
