feat: list companies
- Componente que muestra la lista de compañías
- Ruta creada

--- a/client/src/app/components/list-artists/list-artists.component.html
+++ b/client/src/app/components/list-artists/list-artists.component.html
@@ -7,8 +7,8 @@
         <img width="100%" [src]="getArtistImage(artist)" [alt]="artist.img" class="artist-img">
       </div>
       <h3 class="mb-2">{{ artist.name }}</h3>
-      <p class="year"><strong>Ciudad:</strong> {{ artist.bornCity }}</p>
+      <p class="city"><strong>Ciudad:</strong> {{ artist.bornCity }}</p>
       <p ><strong>Fecha nacimiento:</strong> {{ artist.birthdate }}</p>
-      <p class="duration"><strong>Puntuación:</strong> {{ artist.rating }} seconds</p>
+      <p class="rating"><strong>Puntuación:</strong> {{ artist.rating }}</p>
     </div>
   </div>
