--- a/client/src/app/components/list-songs/list-songs.component.css
+++ b/client/src/app/components/list-songs/list-songs.component.css
@@ -54,4 +54,18 @@
   .input-underline:focus {
     border-bottom: 2px solid #007bff; /* Cambia el color al hacer foco */
   }
+
+  /* Skeleton Loader */
+  .skeleton {
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(-90deg, #e0e0e0 0%, #f5f5f5 50%, #e0e0e0 100%);
+    background-size: 400% 400%;
+    animation: shimmer 1.5s infinite;
+  }
+  
+  @keyframes shimmer {
+    0% { background-position: 100% 0; }
+    100% { background-position: -100% 0; }
+  }
   
