--- a/client/src/app/components/list-songs/list-songs.component.html
+++ b/client/src/app/components/list-songs/list-songs.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex mb-4">
+<div class="d-flex mb-4 mx-5">
     <h2>{{'SONGS.HEADER.hd_titulo' | translate}}</h2>
     <button class="btn btn-primary ms-4" data-bs-toggle="modal" data-bs-target="#addSongModal">
         <i class="bi bi-plus-lg"></i>
